<resources>
    <string name="app_name">QuisTaller</string>
    <string name="str_1">Main Creative Mains</string>
    <string name="str_2">UI Ux Designer at Creative</string>
    <string name="str_3">IOs Gamen / Margin Of Game Concept</string>
    <string name="str_4">Game designe , ilustration Ios , fine Arts  Digital Art</string>
    <string name="str_5">246</string>
    <string name="str_6">723</string>
    <string name="str_7">243</string>
</resources>
